Version 7.1.1
-------------

- Add printfStyle option to JUL integration. (thanks giilby)

Version 7.1.0
-------------

- Use RavenFactory's class loader when creating the service loader, fixing some issues in containers. (thanks exell-christopher)
- Add ``release`` property to ``raven-log4j``. (thanks molaschi)
- Add ``release`` property to JUL integration and ``raven-log4j2``.
- Add setters for ``dsn`` and ``tags`` in JUL integration, fixes integration with WildFly. (thanks giilby)


Version 7.0.0
-------------

- Changed Maven groupId to ``com.getsentry``