@@ -2,6 +2,7 @@ Version 7.1.1
 -------------
 
 - Add printfStyle option to JUL integration. (thanks giilby)
+- Updated Log4j2 documentation to refer to the Thread Context rather than the MDC. (thanks grobmeier)
 
 Version 7.1.0
 -------------
